--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find your train - it will be awesome!
+  h1 Find your train - it will be even better!
   p Select your train below to see its current schedule.
   #wrapper
     #trainList
